Travelers->OPT1 Main Board FINISHED - BUG: Travelers value is too high

--- a/assets/style-cards.css
+++ b/assets/style-cards.css
@@ -196,6 +196,15 @@
     flex-direction: column;
   }
 
+  .main-board-container-standard-h {
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .main-board-label {
+    padding-left: 0px !important;
+  }
+
 }
 
 @media only screen and (max-width: 992px) {
